plugins/make/make-compact/samples/make-failure.txt
cc -O2 -Wall -Iinclude -c src/file01.c -o build/file01.o
cc -O2 -Wall -Iinclude -c src/file02.c -o build/file02.o
cc -O2 -Wall -Iinclude -c src/file03.c -o build/file03.o
cc -O2 -Wall -Iinclude -c src/file04.c -o build/file04.o
cc -O2 -Wall -Iinclude -c src/file05.c -o build/file05.o
cc -O2 -Wall -Iinclude -c src/file06.c -o build/file06.o
cc -O2 -Wall -Iinclude -c src/file07.c -o build/file07.o
cc -O2 -Wall -Iinclude -c src/file08.c -o build/file08.o
cc -O2 -Wall -Iinclude -c src/parser.c -o build/parser.o
src/parser.c: In function 'parse_item':
src/parser.c:214:17: warning: unused variable 'start' [-Wunused-variable]
  214 |     const char *start = cursor;
      |                 ^~~~~
src/parser.c:231:12: error: 'Token' has no member named 'lexeme'
  231 |     if (tok.lexeme == NULL) {
      |            ^
src/parser.c:232:16: error: incompatible type for argument 1 of 'strlen'
  232 |         return strlen(tok);
      |                ^~~~~~
In file included from src/parser.c:3:
/usr/include/string.h:407:35: note: expected 'const char *' but argument is of type 'Token'
  407 | extern size_t strlen (const char *__s)
      |                       ~~~~~~~~~~~~^~~
make[2]: *** [Makefile:87: build/parser.o] Error 1
make[2]: Leaving directory '/work/project/src'
make[1]: *** [Makefile:41: all] Error 2
make: *** [Makefile:12: release] Error 2
